--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-colab
+practicas
+baina-lie.py
+bode.py
+1N4007.txt
+1N4148.txt
+carga.csv
+gggg.py
+graficar_numpy.py
 Aprendiendo-colab.docx
+incertidumbres.xlsx
+JFET_electronica.py
